13-Microservices-Distributed-Tracing-using-AWS-XRay-on-EKS/02-Applications/05-NotificationMicroservice-SMTP-externalName-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: smtp-service
spec:
  type: ExternalName
  externalName: email-smtp.ap-southeast-1.amazonaws.com
